--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 *.mo
 *~
 __pycache__
-db.sqlite3
+# db.sqlite3
 .DS_Store
 .vscode
 media/**
-**/migrations/**
-!**/migrations
-!**/migrations/__init__.py
+# **/migrations/**
+# !**/migrations
+# !**/migrations/__init__.py
